Add some more comments to numeric literal parsing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 4.1)
+cmake_minimum_required(VERSION 3.16)
 
 set(CMAKE_C_FLAGS_DEBUG_INIT "-O0 -g -fsanitize=address")
 set(CMAKE_C_FLAGS_RELEASE_INIT "-O3")
@@ -7,25 +7,30 @@ project(SimpleC C)
 
 set(CMAKE_C_STANDARD 11)
 
-set(SOURCES
-		Util/New.h
-		Util/SpanDef.h
-		Util/Span.h
-		Util/ArrayDef.h
+set(UTIL_SOURCES
 		Util/Array.h
-		Util/ListDef.h
-		Util/List.h
-		Util/String.h
-		Util/String.c
-		Util/File.h
+		Util/ArrayDef.h
 		Util/File.c
+		Util/File.h
+		Util/List.h
+		Util/ListDef.h
+		Util/Macros.h
+		Util/Managed.h
+		Util/Span.h
+		Util/SpanDef.h
+		Util/String.c
+		Util/String.h
+)
+
+set(SOURCES
 		Lexer.h
 		Lexer.c
 		Token.h
 		Token.c
 		Parser.h
 		Parser.c
-		main.c)
-add_executable(SimpleC ${SOURCES})
+		main.c
+)
+add_executable(SimpleC ${UTIL_SOURCES} ${SOURCES})
 
 target_compile_options(SimpleC PRIVATE -Wall -Wextra -Wno-unused)
